# boc-allocation-review-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PROJECT_CONTEXT.md  README.md  SECURITY.md  SKILL.md  app.py  pyproject.toml  walkthrough.md
.github/: pull_request_template.md
assets/: README.md
boc_agent/: __init__.py  cli.py  ui_helpers.py
data/: reviewed_boc_gl_dataset.xlsx
docs/: adk_mapping.md  adk_vertex_migration.md  architecture.md  architecture_diagram_guide.md  cost_guardrails.md  decision_log.md  demo_assets_guide.md  demo_cases.md  demo_script.md  deployment_cloud_run.md  evaluation_plan.md  final_qa_checklist.md  github_release_draft.md  interview_notes.md  logo_guidelines.md  mvp_scope.md  phase12_adk_feasibility.md  phase12_implementation_plan.md  phase12_migration_risks.md  phase12_poc_checklist.md  phase12_runtime_mapping.md  portfolio_case_study.md  portfolio_publishing_checklist.md  presentation_flow.md  problem_statement.md  project_pitch.md  recruiter_quickstart.md  release_checklist.md  runtime_architecture.md  screenshot_checklist.md  social_preview.md  video_recording_guide.md
scripts/: build_review_queue.py  evaluate_outputs.py  smoke_deployment.py
tests/: test_adk_migration_docs.py  test_allocation_rules.py  test_chat_assistant.py  test_cost_guardrails_docs.py  test_dashboard_helpers.py  test_demo_assets_docs.py  test_deployment_files.py  test_human_review.py  test_orchestrator.py  test_phase12_docs.py  test_portfolio_docs.py  test_rag_pipeline.py  test_release_docs.py  (+6 more)
(+57 files in other folders)
