[project]
name = "boc-allocation-review-agent"
version = "0.1.0"
description = "BOC and CAVCO Allocation Review Agent capstone project"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "streamlit>=1.58.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boc_agent"]

[tool.pytest.ini_options]
pythonpath = "."
